src/Frontend/Parser/Parser.cpp
/* Copyright (C) 2021  Dhruv Chawla */
/* See LICENSE at project root for license details */
#include "Frontend/Parser/Parser.hpp"

#include "Backend/VirtualMachine/Value.hpp"
#include "Common.hpp"
#include "ErrorLogger/ErrorLogger.hpp"
#include "Frontend/Parser/TypeResolver.hpp"
#include "Frontend/Scanner/Scanner.hpp"

#include <algorithm>
#include <array>
#include <fstream>
#include <functional>
#include <stdexcept>
#include <type_traits>
#include <utility>

std::vector<std::pair<Module, std::size_t>> Parser::parsed_modules{};

struct ParseException : public std::invalid_argument {
    Token token{};
    explicit ParseException(Token token, const std::string_view error)
        : std::invalid_argument(std::string{error.begin(), error.end()}), token{std::move(token)} {}
};

void Parser::add_rule(TokenType type, ParseRule rule) noexcept {
    rules[static_cast<std::size_t>(type)] = rule;
}

[[nodiscard]] constexpr const typename Parser::ParseRule &Parser::get_rule(TokenType type) const noexcept {
    return rules[static_cast<std::size_t>(type)];
}

void Parser::throw_parse_error(const std::string_view message) const {
    const Token &erroneous = peek();
    error({std::string{message}}, erroneous);
    throw ParseException{erroneous, message};
}

void Parser::throw_parse_error(const std::string_view message, const Token &where) const {
    error({std::string{message}}, where);
    throw ParseException{where, message};
}

void Parser::synchronize() {
    advance();

    while (not is_at_end()) {
        if (previous().type == TokenType::SEMICOLON || previous().type == TokenType::END_OF_LINE ||
            previous().type == TokenType::RIGHT_BRACE) {
            return;
        }

        switch (peek().type) {
            case TokenType::BREAK:
            case TokenType::CONTINUE:
            case TokenType::CLASS:
            case TokenType::FN:
            case TokenType::FOR:
            case TokenType::IF:
            case TokenType::IMPORT:
            case TokenType::PRIVATE:
            case TokenType::PROTECTED:
            case TokenType::PUBLIC:
            case TokenType::RETURN:
            case TokenType::TYPE:
            case TokenType::CONST:
            case TokenType::VAR:
            case TokenType::WHILE: return;
            default:;
        }

        advance();
    }
}

Parser::Parser(const std::vector<Token> &tokens, Module &module, std::size_t current_depth)
    : tokens{tokens}, current_module{module}, current_module_depth{current_depth} {
    // clang-format off
    add_rule(TokenType::COMMA,         {nullptr, &Parser::comma, ParsePrecedence::of::COMMA});
    add_rule(TokenType::EQUAL,         {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::PLUS_EQUAL,    {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::MINUS_EQUAL,   {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::STAR_EQUAL,    {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::SLASH_EQUAL,   {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::QUESTION,      {nullptr, &Parser::ternary, ParsePrecedence::of::TERNARY});
    add_rule(TokenType::COLON,         {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::BIT_OR,        {nullptr, &Parser::binary, ParsePrecedence::of::BIT_OR});
    add_rule(TokenType::BIT_XOR,       {nullptr, &Parser::binary, ParsePrecedence::of::BIT_XOR});
    add_rule(TokenType::BIT_AND,       {nullptr, &Parser::binary, ParsePrecedence::of::BIT_AND});
    add_rule(TokenType::NOT_EQUAL,     {nullptr, &Parser::binary, ParsePrecedence::of::EQUALITY});
    add_rule(TokenType::EQUAL_EQUAL,   {nullptr, &Parser::binary, ParsePrecedence::of::EQUALITY});
    add_rule(TokenType::GREATER,       {nullptr, &Parser::binary, ParsePrecedence::of::ORDERING});
    add_rule(TokenType::GREATER_EQUAL, {nullptr, &Parser::binary, ParsePrecedence::of::ORDERING});
    add_rule(TokenType::LESS,          {nullptr, &Parser::binary, ParsePrecedence::of::ORDERING});
    add_rule(TokenType::LESS_EQUAL,    {nullptr, &Parser::binary, ParsePrecedence::of::ORDERING});
    add_rule(TokenType::RIGHT_SHIFT,   {nullptr, &Parser::binary, ParsePrecedence::of::SHIFT});
    add_rule(TokenType::LEFT_SHIFT,    {nullptr, &Parser::binary, ParsePrecedence::of::SHIFT});
    add_rule(TokenType::DOT_DOT,       {nullptr, &Parser::binary, ParsePrecedence::of::RANGE});
    add_rule(TokenType::DOT_DOT_EQUAL, {nullptr, &Parser::binary, ParsePrecedence::of::RANGE});
    add_rule(TokenType::MINUS,         {&Parser::unary, &Parser::binary, ParsePrecedence::of::SUM});
    add_rule(TokenType::PLUS,          {&Parser::unary, &Parser::binary, ParsePrecedence::of::SUM});
    add_rule(TokenType::MODULO,        {nullptr, &Parser::binary, ParsePrecedence::of::PRODUCT});
    add_rule(TokenType::SLASH,         {nullptr, &Parser::binary, ParsePrecedence::of::PRODUCT});
    add_rule(TokenType::STAR,          {nullptr, &Parser::binary, ParsePrecedence::of::PRODUCT});
    add_rule(TokenType::NOT,           {&Parser::unary, nullptr, ParsePrecedence::of::UNARY});
    add_rule(TokenType::BIT_NOT,       {&Parser::unary, nullptr, ParsePrecedence::of::UNARY});
    add_rule(TokenType::PLUS_PLUS,     {&Parser::unary, nullptr, ParsePrecedence::of::UNARY});
    add_rule(TokenType::MINUS_MINUS,   {&Parser::unary, nullptr, ParsePrecedence::of::UNARY});
    add_rule(TokenType::DOT,           {nullptr, &Parser::dot, ParsePrecedence::of::CALL});
    add_rule(TokenType::LEFT_PAREN,    {&Parser::grouping, &Parser::call, ParsePrecedence::of::CALL});
    add_rule(TokenType::RIGHT_PAREN,   {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::LEFT_INDEX,    {&Parser::list, &Parser::index, ParsePrecedence::of::CALL});
    add_rule(TokenType::RIGHT_INDEX,   {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::LEFT_BRACE,    {&Parser::tuple, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::RIGHT_BRACE,   {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::DOUBLE_COLON,  {nullptr, &Parser::scope_access, ParsePrecedence::of::PRIMARY});
    add_rule(TokenType::SEMICOLON,     {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::ARROW,         {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::IDENTIFIER,    {&Parser::variable, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::STRING_VALUE,  {&Parser::literal, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::INT_VALUE,     {&Parser::literal, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::FLOAT_VALUE,   {&Parser::literal, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::AND,           {nullptr, &Parser::and_, ParsePrecedence::of::LOGIC_AND});
    add_rule(TokenType::BREAK,         {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::CLASS,         {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::CONST,         {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::CONTINUE,      {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::DEFAULT,       {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::ELSE,          {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::FALSE,         {&Parser::literal, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::FLOAT,         {&Parser::variable, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::FN,            {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::FOR,           {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::IF,            {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::IMPORT,        {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::INT,           {&Parser::variable, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::MOVE,          {&Parser::move, nullptr, ParsePrecedence::of::PRIMARY});
    add_rule(TokenType::NULL_,         {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::OR,            {nullptr, &Parser::or_, ParsePrecedence::of::LOGIC_OR});
    add_rule(TokenType::PROTECTED,     {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::PRIVATE,       {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::PUBLIC,        {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::REF,           {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::RETURN,        {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::STRING,        {&Parser::variable, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::SUPER,         {&Parser::super, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::SWITCH,        {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::THIS,          {&Parser::this_expr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::TRUE,          {&Parser::literal, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::TYPE,          {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::TYPEOF,        {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::VAR,           {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::WHILE,         {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::NONE,          {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::END_OF_LINE,   {nullptr, nullptr, ParsePrecedence::of::NONE});
    add_rule(TokenType::END_OF_FILE,   {nullptr, nullptr, ParsePrecedence::of::NONE});
    // clang-format on
}

[[nodiscard]] bool Parser::is_at_end() const noexcept {
    return current >= tokens.size();
}

[[nodiscard]] const Token &Parser::previous() const noexcept {
    return tokens[current - 1];
}

const Token &Parser::advance() {
    if (is_at_end()) {
        error({"Found unexpected EOF while parsing"}, previous());
        throw ParseException{previous(), "Found unexpected EOF while parsing"};
    }

    current++;
    return tokens[current - 1];
}

[[nodiscard]] const Token &Parser::peek() const noexcept {
    return tokens[current];
}

[[nodiscard]] bool Parser::check(TokenType type) const noexcept {
    return peek().type == type;
}

template <typename... Args>
bool Parser::match(Args... args) {
    std::array arr{std::forward<Args>(args)...};

    if (std::any_of(arr.begin(), arr.end(), [this](auto &&arg) { return check(arg); })) {
        advance();
        return true;
    } else {
        return false;
    }
}

template <typename... Args>
void Parser::consume(const std::string_view message, Args... args) {
    if (not match(args...)) {
        error({std::string{message}}, peek());
        throw ParseException{peek(), message};
    }
}

template <typename... Args>
void Parser::consume(std::string_view message, const Token &where, Args... args) {
    if (not match(args...)) {
        error({std::string{message}}, where);
        throw ParseException{where, message};
    }
}

void recursively_change_module_depth(std::pair<Module, std::size_t> &module, std::size_t value) {
    module.second = value;
    for (std::size_t imported : module.first.imported) {
        recursively_change_module_depth(Parser::parsed_modules[imported], value + 1);
    }
}

IdentifierTuple Parser::ident_tuple() {
    IdentifierTuple::TupleType result{};
    while (peek().type != TokenType::RIGHT_BRACE) {
        consume("Expected either identifier or '{' in identifier tuple", TokenType::IDENTIFIER, TokenType::LEFT_BRACE);
        if (previous().type == TokenType::IDENTIFIER) {
            result.emplace_back(
                IdentifierTuple::DeclarationDetails{previous(), NumericConversionType::NONE, false, nullptr});
        } else {
            result.emplace_back(ident_tuple());
        }
        if (peek().type != TokenType::RIGHT_BRACE && peek().type != TokenType::COMMA) {
            consume("Expected '}' after identifier tuple", TokenType::RIGHT_BRACE); // This consume will always fail
        } else {
            match(TokenType::COMMA);
        }
    }
    consume("Expected '}' after identifier tuple", TokenType::RIGHT_BRACE);
    return IdentifierTuple{std::move(result)};
}

std::vector<StmtNode> Parser::program() {
    std::vector<StmtNode> statements;

    while (peek().type != TokenType::END_OF_FILE && peek().type != TokenType::END_OF_LINE) {
        statements.emplace_back(declaration());
    }

    if (peek().type == TokenType::END_OF_LINE) {
        advance();
    }

    consume("Expected EOF at the end of file", TokenType::END_OF_FILE);
    return statements;
}

ExprNode Parser::parse_precedence(ParsePrecedence::of precedence) {
    using namespace std::string_literals;
    advance();

    ExprPrefixParseFn prefix = get_rule(previous().type).prefix;
    if (prefix == nullptr) {
        std::string message = "Unexpected token in expression '";
        message += [this]() {
            if (previous().type == TokenType::END_OF_LINE) {
                return "\\n' (newline)"s;
            } else {
                return previous().lexeme + "'";
            }
        }();
        bool had_error_before = logger.had_error;
        error({message}, previous());
        if (had_error_before) {
            note({"This may occur because of previous errors leading to the parser being confused"});
        }
        throw ParseException{previous(), message};
    }

    bool can_assign = precedence <= ParsePrecedence::of::ASSIGNMENT;
    ExprNode left = std::invoke(prefix, this, can_assign);

    while (precedence <= get_rule(peek().type).precedence) {
        ExprInfixParseFn infix = get_rule(advance().type).infix;
        if (infix == nullptr) {
            error({"'", previous().lexeme, "' cannot occur in an infix/postfix expression"}, previous());
            if (previous().type == TokenType::PLUS_PLUS) {
                note({"Postfix increment is not supported"});
            } else if (previous().type == TokenType::MINUS_MINUS) {
                note({"Postfix decrement is not supported"});
            }
            throw ParseException{previous(), "Incorrect infix/postfix expression"};
        }
        left = std::invoke(infix, this, can_assign, std::move(left));
    }

    if (can_assign && match(TokenType::EQUAL, TokenType::PLUS_EQUAL, TokenType::MINUS_EQUAL, TokenType::STAR_EQUAL,
                          TokenType::SLASH_EQUAL)) {
        error({"Invalid assignment target"}, previous());
        throw ParseException{previous(), "Invalid assignment target"};
    }

    return left;
}

ExprNode Parser::expression() {
    return parse_precedence(ParsePrecedence::of::COMMA);
}

ExprNode Parser::assignment() {
    return parse_precedence(ParsePrecedence::of::ASSIGNMENT);
}

ExprNode Parser::and_(bool, ExprNode left) {
    Token oper = previous();
    ExprNode right = parse_precedence(ParsePrecedence::of::LOGIC_AND);
    auto *node = allocate_node(LogicalExpr, std::move(left), std::move(right));
    node->synthesized_attrs.token = std::move(oper);
    return ExprNode{node};
}

ExprNode Parser::binary(bool, ExprNode left) {
    Token oper = previous();
    ExprNode right = parse_precedence(
        ParsePrecedence::of{static_cast<int>(ParsePrecedence::of(get_rule(previous().type).precedence)) + 1});
    auto *node = allocate_node(BinaryExpr, std::move(left), std::move(right));
    node->synthesized_attrs.token = std::move(oper);
    return ExprNode{node};
}

ExprNode Parser::call(bool, ExprNode function) {
    Token paren = previous();
    std::vector<std::tuple<ExprNode, NumericConversionType, bool>> args{};
    if (peek().type != TokenType::RIGHT_PAREN) {
        do {
            args.emplace_back(assignment(), NumericConversionType::NONE, false);
        } while (match(TokenType::COMMA));
    }
    consume("Expected ')' after function call", TokenType::RIGHT_PAREN);
    auto *node = allocate_node(CallExpr, std::move(function), std::move(args), false);
    node->synthesized_attrs.token = std::move(paren);
    return ExprNode{node};
}

ExprNode Parser::comma(bool, ExprNode left) {
    std::vector<ExprNode> exprs{};
    exprs.emplace_back(std::move(left));
    do {
        exprs.emplace_back(assignment());
    } while (match(TokenType::COMMA));

    return ExprNode{allocate_node(CommaExpr, std::move(exprs))};
}

ExprNode Parser::dot(bool can_assign, ExprNode left) {
    // Roughly based on: https://github.com/rust-lang/rust/pull/71322/files
    //
    // If a dot access is followed by a floating point literal, that likely means the code is in the form of `x.2.0`
    // This will be scanned as `x`, `.`, `2.0`
    // Thus, split the floating literal into its components (`2`, `.`, `0`) and use those components while parsing
    std::vector<Token> components{};
    if (peek().type == TokenType::FLOAT_VALUE) {
        std::string num = peek().lexeme;
        if (num.find('.') == std::string::npos) {
            error({"Use of float literal in member access"}, peek());
            advance();
            throw_parse_error("Use of float literal in member access", previous());
        }
        std::size_t cursor = 0;
        while (num[cursor] != '.') {
            cursor++;
        }

        components.emplace_back(
            Token{TokenType::INT_VALUE, num.substr(0, cursor), peek().line, peek().start, peek().start + cursor});
        // The dot is unnecessary so it is skipped
        components.emplace_back(
            Token{TokenType::INT_VALUE, num.substr(cursor + 1), peek().line, peek().start + cursor + 1, peek().end});

        advance();
    } else {
        consume("Expected identifier or integer literal after '.'", TokenType::IDENTIFIER, TokenType::INT_VALUE);
    }
    if (not components.empty()) {
        // If components is not empty, transform left
        // For example, `x.2.0`, has left as `x`.
        // Left is transformed into `x.2`
        // Then `name` is set to `0`, to make `x.2.0`
        left = ExprNode{allocate_node(GetExpr, std::move(left), components[0])};
    }

    Token name = previous();

    // A floating literal was used as an access
    if (not components.empty()) {
        name = components[1];
    }

    if (can_assign && match(TokenType::EQUAL, TokenType::PLUS_EQUAL, TokenType::MINUS_EQUAL, TokenType::STAR_EQUAL,
                          TokenType::SLASH_EQUAL)) {
        Token oper = previous();
        ExprNode value = assignment();

        auto *node = allocate_node(
            SetExpr, std::move(left), std::move(name), std::move(value), NumericConversionType::NONE, false);
        node->synthesized_attrs.token = std::move(oper);
        return ExprNode{node};
    } else {
        return ExprNode{allocate_node(GetExpr, std::move(left), std::move(name))};
    }
}

ExprNode Parser::index(bool can_assign, ExprNode object) {
    Token oper = previous();
    ExprNode index = expression();
    consume("Expected ']' after array subscript index", TokenType::RIGHT_INDEX);
    auto ind = IndexExpr{std::move(object), std::move(index)};
    ind.synthesized_attrs.token = std::move(oper);

    if (can_assign && match(TokenType::EQUAL, TokenType::PLUS_EQUAL, TokenType::MINUS_EQUAL, TokenType::STAR_EQUAL,
                          TokenType::SLASH_EQUAL)) {
        Token equals = previous();
        ExprNode value = assignment();
        auto *assignment =
            allocate_node(ListAssignExpr, std::move(ind), std::move(value), NumericConversionType::NONE, false);
        assignment->synthesized_attrs.token = std::move(equals);
        return ExprNode{assignment};
    }
    return ExprNode{allocate_node(IndexExpr, std::move(ind))};
}

ExprNode Parser::or_(bool, ExprNode left) {
    Token oper = previous();
    ExprNode right = parse_precedence(ParsePrecedence::of::LOGIC_OR);
    auto *node = allocate_node(LogicalExpr, std::move(left), std::move(right));
    node->synthesized_attrs.token = std::move(oper);
    return ExprNode{node};
}

ExprNode Parser::grouping(bool) {
    ExprNode expr = expression();
    consume("Expected ')' after parenthesized expression", TokenType::RIGHT_PAREN);
    return ExprNode{allocate_node(GroupingExpr, std::move(expr), nullptr)};
}

ExprNode Parser::list(bool) {
    Token bracket = previous();
    std::vector<ListExpr::ElementType> elements{};
    if (peek().type != TokenType::RIGHT_INDEX) {
        do {
            elements.emplace_back(assignment(), NumericConversionType::NONE, false);
        } while (match(TokenType::COMMA) && peek().type != TokenType::RIGHT_INDEX);
    }
    match(TokenType::COMMA); // Match trailing comma
    consume("Expected ']' after list expression", peek(), TokenType::RIGHT_INDEX);
    return ExprNode{allocate_node(ListExpr, std::move(bracket), std::move(elements), nullptr)};
}

ExprNode Parser::literal(bool) {
    auto *type = allocate_node(PrimitiveType, Type::INT, true, false);
    auto *node = allocate_node(LiteralExpr, LiteralValue{nullptr}, TypeNode{type});
    node->synthesized_attrs.token = previous();
    switch (previous().type) {
        case TokenType::INT_VALUE: {
            node->value = LiteralValue{std::stoi(previous().lexeme)};
            break;
        }
        case TokenType::FLOAT_VALUE: {
            node->value = LiteralValue{std::stod(previous().lexeme)};
            node->type->primitive = Type::FLOAT;
            break;
        }
        case TokenType::STRING_VALUE: {
            node->type->primitive = Type::STRING;
            node->value = LiteralValue{previous().lexeme};
            while (match(TokenType::STRING_VALUE)) {
                node->value.to_string() += previous().lexeme;
            }
            break;
        }
        case TokenType::FALSE: {
            node->type->primitive = Type::BOOL;
            node->value = LiteralValue{false};
            break;
        }
        case TokenType::TRUE: {
            node->type->primitive = Type::BOOL;
            node->value = LiteralValue{true};
            break;
        }
        case TokenType::NULL_: {
            node->type->primitive = Type::NULL_;
            node->value = LiteralValue{nullptr};
            break;
        }

        default: throw ParseException{previous(), "Unexpected TokenType passed to literal parser"};
    }

    return ExprNode{node};
}

ExprNode Parser::move(bool) {
    Token op = previous();
    consume("Expected identifier after 'move' keyword", TokenType::IDENTIFIER);
    auto *var = allocate_node(VariableExpr, previous(), IdentifierType::LOCAL);
    var->synthesized_attrs.token = var->name;
    auto *expr = allocate_node(MoveExpr, ExprNode{var});
    expr->synthesized_attrs.token = op;
    return ExprNode{expr};
}

ExprNode Parser::scope_access(bool, ExprNode left) {
    Token colon_colon = previous();
    consume("Expected identifier to be accessed after scope name", TokenType::IDENTIFIER);
    Token name = previous();
    auto *node = allocate_node(ScopeAccessExpr, std::move(left), std::move(name));
    node->synthesized_attrs.token = std::move(colon_colon);
    return ExprNode{node};
}

ExprNode Parser::super(bool) {
    if (not(in_class && in_function)) {
        throw_parse_error("Cannot use super expression outside a class");
    }
    Token super = previous();
    consume("Expected '.' after 'super' keyword", TokenType::DOT);
    consume("Expected name after '.' in super expression", TokenType::IDENTIFIER);
    Token name = previous();
    return ExprNode{allocate_node(SuperExpr, std::move(super), std::move(name))};
}

ExprNode Parser::ternary(bool, ExprNode left) {
    Token question = previous();
    ExprNode middle = parse_precedence(ParsePrecedence::of::LOGIC_OR);
    consume("Expected colon in ternary expression", TokenType::COLON);
    ExprNode right = parse_precedence(ParsePrecedence::of::TERNARY);
    auto *node = allocate_node(TernaryExpr, std::move(left), std::move(middle), std::move(right));
    node->synthesized_attrs.token = std::move(question);
    return ExprNode{node};
}

ExprNode Parser::this_expr(bool) {
    if (not(in_class && in_function)) {
        throw_parse_error("Cannot use 'this' keyword outside a class's constructor or destructor");
    }
    Token keyword = previous();
    return ExprNode{allocate_node(ThisExpr, std::move(keyword))};
}

ExprNode Parser::tuple(bool) {
    Token brace = previous();
    std::vector<TupleExpr::ElementType> elements{};
    while (peek().type != TokenType::RIGHT_BRACE) {
        elements.emplace_back(std::make_tuple(ExprNode{assignment()}, NumericConversionType::NONE, false));
        match(TokenType::COMMA);
    }
    consume("Expected '}' after tuple expression", TokenType::RIGHT_BRACE);
    return ExprNode{allocate_node(TupleExpr, std::move(brace), std::move(elements), {})};
}

ExprNode Parser::unary(bool) {
    Token oper = previous();
    ExprNode expr = parse_precedence(get_rule(previous().type).precedence);
    auto *node = allocate_node(UnaryExpr, std::move(oper), std::move(expr));
    node->synthesized_attrs.token = node->oper;
    return ExprNode{node};
}

ExprNode Parser::variable(bool can_assign) {
    Token name = previous();
    if (can_assign && match(TokenType::EQUAL, TokenType::PLUS_EQUAL, TokenType::MINUS_EQUAL, TokenType::STAR_EQUAL,
                          TokenType::SLASH_EQUAL)) {
        Token oper = previous();
        ExprNode value = assignment();
        auto *node = allocate_node(
            AssignExpr, std::move(name), std::move(value), NumericConversionType::NONE, false, IdentifierType::LOCAL);
        node->synthesized_attrs.token = std::move(oper);
        return ExprNode{node};
    } else if (peek().type == TokenType::DOUBLE_COLON) {
        auto *node = allocate_node(ScopeNameExpr, name);
        node->synthesized_attrs.token = std::move(name);
        return ExprNode{node};
    } else {
        auto *node = allocate_node(VariableExpr, name, IdentifierType::LOCAL);
        node->synthesized_attrs.token = std::move(name);
        return ExprNode{node};
    }
}

////////////////////////////////////////////////////////////////////////////////

StmtNode Parser::declaration() {
    try {
        if (match(TokenType::CLASS)) {
            return class_declaration();
        } else if (match(TokenType::FN)) {
            return function_declaration();
        } else if (match(TokenType::IMPORT)) {
            return import_statement();
        } else if (match(TokenType::TYPE)) {
            return type_declaration();
        } else if (match(TokenType::VAR, TokenType::CONST, TokenType::REF)) {
            if (peek().type == TokenType::LEFT_BRACE) {
                return vartuple_declaration();
            } else {
                return variable_declaration();
            }
        } else {
            return statement();
        }
    } catch (const ParseException &) {
        synchronize();
        return {nullptr};
    }
}

StmtNode Parser::class_declaration() {
    consume("Expected class name after 'class' keyword", TokenType::IDENTIFIER);

    if (current_module.classes.find(previous().lexeme) != current_module.classes.end()) {
        throw_parse_error("Class already defined");
    }

    Token name = previous();
    FunctionStmt *ctor{nullptr};
    FunctionStmt *dtor{nullptr};
    std::vector<ClassStmt::MemberType> members{};
    std::vector<ClassStmt::MethodType> methods{};
    std::unordered_map<std::string_view, std::size_t> member_map{};
    std::unordered_map<std::string_view, std::size_t> method_map{};

    ScopedManager current_methods_manager{current_methods, &methods};

    consume("Expected '{' after class name", TokenType::LEFT_BRACE);
    ScopedManager class_manager{in_class, true};

    while (not is_at_end() && peek().type != TokenType::RIGHT_BRACE) {
        consume("Expected 'public', 'private' or 'protected' modifier before member declaration", TokenType::PRIVATE,
            TokenType::PUBLIC, TokenType::PROTECTED);

        VisibilityType visibility = [this]() {
            if (previous().type == TokenType::PUBLIC) {
                return VisibilityType::PUBLIC;
            } else if (previous().type == TokenType::PRIVATE) {
                return VisibilityType::PRIVATE;
            } else {
                return VisibilityType::PROTECTED;
            }
        }();

        if (match(TokenType::VAR, TokenType::CONST, TokenType::REF)) {
            try {
                std::unique_ptr<VarStmt> member{dynamic_cast<VarStmt *>(variable_declaration().release())};
                member_map[member->name.lexeme] = members.size();
                members.emplace_back(std::move(member), visibility);
            } catch (...) { synchronize(); }
        } else if (match(TokenType::FN)) {
            try {
                bool found_dtor = match(TokenType::BIT_NOT);
                if (found_dtor && peek().lexeme != name.lexeme) {
                    advance();
                    throw_parse_error("The name of the destructor has to be the same as the name of the class");
                }

                std::unique_ptr<FunctionStmt> method{dynamic_cast<FunctionStmt *>(function_declaration().release())};
                const Token &method_name = method->name;

                if (method_name.lexeme == name.lexeme) {
                    if (found_dtor && dtor == nullptr) {
                        using namespace std::string_literals;
                        dtor = method.get();
                        dtor->name.lexeme = "~"s + dtor->name.lexeme; // Turning Foo into ~Foo
                    } else if (ctor == nullptr) {
                        ctor = method.get();
                    } else {
                        constexpr const std::string_view message =
                            "Cannot declare constructors or destructors more than once";
                        error({std::string{message}}, method_name);
                        throw ParseException{method_name, message};
                    }
                }
                method_map[method->name.lexeme] = methods.size();
                methods.emplace_back(std::move(method), visibility);
            } catch (...) { synchronize(); }
        } else {
            throw_parse_error("Expected either member or method declaration in class");
        }
    }

    consume("Expected '}' at the end of class declaration", TokenType::RIGHT_BRACE);
    auto *class_definition = allocate_node(ClassStmt, std::move(name), ctor, dtor, std::move(members),
        std::move(methods), std::move(member_map), std::move(method_map));
    current_module.classes[class_definition->name.lexeme] = class_definition;

    return StmtNode{class_definition};
}

StmtNode Parser::function_declaration() {
    bool is_not_dtor = previous().type != TokenType::BIT_NOT;

    consume("Expected function name after 'fn' keyword", TokenType::IDENTIFIER);
